Client model finsh
